fixes the card images so they are more consistent without the stretching that they had previously, and makes text block less so card sizes are more consistent

--- a/src/index.css
+++ b/src/index.css
@@ -127,9 +127,8 @@ p {
       min-width: 100vw;
       position: relative;
       width: 100%;
-
-
   }
+
   .button--container {
     align-items: unset;
     display: flex;
@@ -200,6 +199,7 @@ p {
   padding: 2em;
   text-overflow: ellipsis;
   z-index: 10;
+  height: fit-content;
 }
   .right-button {
     background-color: transparent;
@@ -255,20 +255,38 @@ p {
 
 /* =============================== MAIN SECTION  =============================== */
 
-.main--container {
-  background-color: #010102;
-  padding-bottom: 10vh;
-  padding: 8em;
-  position: relative;
-  width: 100vw;
+.image-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: auto;
 }
-.main--container img {
-      height: 100%;
-      max-height: 30vh;
-      min-width: 100%;
-      object-fit: cover;
-      width: auto;
-  }
+
+.main--container {
+    background-color: #010102;
+    padding-bottom: 10vh;
+    padding: 2em 8em;
+    position: relative;
+    width: 100vw;
+}
+/* .image-container > img {
+adjust the max-width to your liking
+  height: 100%;
+  max-height: 30vh;
+  min-width: 100%;
+  max-width: 500px;
+  width: auto;
+
+} */
+
+.image-container > img {
+  min-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  object-position: center;
+  max-height: 250px;
+}
 .main--container-grid {
       display: grid;
       gap: 2rem;
@@ -277,7 +295,7 @@ p {
   }
   .main--display-p-content {
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 3;
     color: white;
     display: -webkit-box;
     line-height: 1.5em;
